k8s/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-ndi-en-prod-backend
  namespace: ns-ndi-en-prod
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # ✅ Ajouter un securityContext au niveau du Pod
      securityContext:
        fsGroup: 33  # Groupe www-data
        fsGroupChangePolicy: "OnRootMismatch"

      containers:
        - name: php
          image: ${CI_REGISTRY}/${CI_PROJET}/${DOCKER_IMAGE_TAG_PHP}
          # ✅ S'assurer que PHP-FPM tourne en www-data
          securityContext:
            runAsUser: 33
            runAsGroup: 33
            allowPrivilegeEscalation: false
          workingDir: /mnt/sfapi
          volumeMounts:
            - name: sfapi-code
              mountPath: /mnt/sfapi
        - name: nginx
          image: ${CI_REGISTRY}/${CI_PROJET}/${DOCKER_IMAGE_TAG_NGINX}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: sfapi-code
              mountPath: /mnt/sfapi
              readOnly: true  # ✅ Nginx n'a besoin que de lire

      volumes:
        - name: sfapi-code
          emptyDir: {}

      imagePullSecrets:
        - name: gitlab-auth
