k8s/backend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-ndi-en-prod-backend
  namespace: ns-ndi-en-prod
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 80
      targetPort: 80
