k8s/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-ndi-en-prod-backend
  namespace: ns-ndi-en-prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ndi-en-prod-backend.labs.iut-larochelle.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-ndi-en-prod-backend
                port:
                  number: 80
          - path: /db
            pathType: Prefix
            backend:
              service:
                name: svc-ndi-en-prod-backend-mariadb
                port:
                  number: 3306
